; ModuleID = '/home/carl/AnghaBench/php-src/ext/opcache/Optimizer/extr_sccp.c_ct_eval_fetch_obj.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/opcache/Optimizer/extr_sccp.c_ct_eval_fetch_obj.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SUCCESS = common dso_local global i64 0, align 8
@FAILURE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32*)* @ct_eval_fetch_obj to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ct_eval_fetch_obj(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %9 = load i32*, i32** %6, align 8
  %10 = call i64 @IS_PARTIAL_OBJECT(i32* %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %32

12:                                               ; preds = %3
  %13 = load i32*, i32** %6, align 8
  %14 = load i32*, i32** %7, align 8
  %15 = call i64 @fetch_obj_prop(i32** %8, i32* %13, i32* %14)
  %16 = load i64, i64* @SUCCESS, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %31

18:                                               ; preds = %12
  %19 = load i32*, i32** %8, align 8
  %20 = icmp ne i32* %19, null
  br i1 %20, label %21, label %31

21:                                               ; preds = %18
  %22 = load i32*, i32** %8, align 8
  %23 = call i32 @IS_BOT(i32* %22)
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %31, label %25

25:                                               ; preds = %21
  %26 = load i32*, i32** %5, align 8
  %27 = load i32*, i32** %8, align 8
  %28 = call i32 @ZVAL_COPY(i32* %26, i32* %27)
  %29 = load i64, i64* @SUCCESS, align 8
  %30 = trunc i64 %29 to i32
  store i32 %30, i32* %4, align 4
  br label %34

31:                                               ; preds = %21, %18, %12
  br label %32

32:                                               ; preds = %31, %3
  %33 = load i32, i32* @FAILURE, align 4
  store i32 %33, i32* %4, align 4
  br label %34

34:                                               ; preds = %32, %25
  %35 = load i32, i32* %4, align 4
  ret i32 %35
}

declare dso_local i64 @IS_PARTIAL_OBJECT(i32*) #1

declare dso_local i64 @fetch_obj_prop(i32**, i32*, i32*) #1

declare dso_local i32 @IS_BOT(i32*) #1

declare dso_local i32 @ZVAL_COPY(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
